update: table library & experiment

--- a/projects/table/src/table.component.html
+++ b/projects/table/src/table.component.html
@@ -69,7 +69,12 @@
           ></td>
           <ng-container *ngFor="let column of columns; first as isFirst">
             <td *ngIf="column.display" [nzLeft]="isFirst ? '60px' : false" [nzEllipsis]="column.ellipsis">
-              {{ data[column.key] }}
+              <ng-container *ngIf="column.render; else def">
+                <ng-container
+                  *ngTemplateOutlet="column.render; context: { $implicit: data[column.key] }"
+                ></ng-container>
+              </ng-container>
+              <ng-template #def>{{ data[column.key] }}</ng-template>
             </td>
           </ng-container>
         </tr>
