--- a/src/styles.less
+++ b/src/styles.less
@@ -1,5 +1,6 @@
 @import '~node_modules/ng-zorro-antd/ng-zorro-antd.less';
 @import '~node_modules/ng-zorro-antd/ng-zorro-antd.aliyun.less';
+@import '~node_modules/ng-zorro-antd/resizable/style/entry.less';
 @import '~node_modules/ng-zorro-antd/code-editor/style/entry.less';
 
 @nav-height: 54px;
