--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -1,61 +1,93 @@
-<ng-template #searchRef>
-  <nz-space>
-    <nz-input-group *nzSpaceItem nzSuffixIcon="search">
-      <input style="width: 180px" nz-input placeholder="关键词搜索" />
-    </nz-input-group>
-    <nz-button-group *nzSpaceItem>
-      <button nz-button nzType="text" nz-tooltip="刷新">
-        <span nz-icon nzType="reload" nzTheme="outline"></span>
-      </button>
-      <button nz-button nzType="text" nz-tooltip="清除">
-        <span nz-icon nzType="clear" nzTheme="outline"></span>
-      </button>
-      <button nz-button nzType="text" nz-tooltip="检索">
-        <span nz-icon nzType="filter" nzTheme="outline"></span>
-      </button>
-    </nz-button-group>
+<wpx-table
+  #tb
+  [wpxModel]="model"
+  [wpxColumns]="[
+    {
+      title: '电子邮件',
+      key: 'email',
+      width: '320px'
+    },
+    {
+      title: '姓名',
+      key: 'name'
+    },
+    {
+      title: '状态',
+      key: 'status',
+      format: 'status'
+    },
+    {
+      title: '创建时间',
+      key: 'create_time',
+      width: '240px',
+      format: 'date'
+    },
+    {
+      title: '修改时间',
+      key: 'update_time',
+      width: '240px',
+      format: 'date'
+    }
+  ]"
+  [wpxItemSize]="50"
+  [wpxOffset]="310"
+  [wpxActions]="actions"
+  (wpxChange)="getData()"
+>
+  <nz-space wpxTitle>
+    <wpx-keyword
+      *nzSpaceItem
+      [wpxModel]="model"
+      [wpxKeys]="['email', 'name']"
+      (wpxSubmit)="getData()"
+      wpxPlaceholder="电子邮件、姓名"
+    ></wpx-keyword>
+    <wpx-toolbox *nzSpaceItem [wpxModel]="model" [wpxSearchForm]="form" (wpxClear)="clear()" (wpxRefresh)="getData()">
+      <form *ngIf="form" nz-form id="search" [formGroup]="form" (wpxSubmit)="search($event)">
+        <nz-row [nzGutter]="[16, 16]">
+          <nz-col [nzSpan]="6">
+            <nz-form-item>
+              <nz-form-label>电子邮件</nz-form-label>
+              <nz-form-control>
+                <input nz-input formControlName="email" />
+              </nz-form-control>
+            </nz-form-item>
+          </nz-col>
+          <nz-col [nzSpan]="6">
+            <nz-form-item>
+              <nz-form-label>姓名</nz-form-label>
+              <nz-form-control>
+                <input nz-input formControlName="name" />
+              </nz-form-control>
+            </nz-form-item>
+          </nz-col>
+        </nz-row>
+      </form>
+    </wpx-toolbox>
   </nz-space>
-</ng-template>
-<ng-template #actionRef>
-  <nz-space>
-    <button *nzSpaceItem nz-button nzType="primary"> 新增 </button>
+  <nz-space wpxExtra>
+    <ng-container *ngIf="model.selection.size as size">
+      <button *nzSpaceItem nz-button nzType="dashed" nz-dropdown [nzDropdownMenu]="menu"> 已选中 {{ size }} 项 </button>
+      <nz-dropdown-menu #menu="nzDropdownMenu">
+        <ul nz-menu>
+          <li nz-menu-item (click)="tb.clearSelections()"> 取消选择 </li>
+        </ul>
+        <ul nz-menu>
+          <li nz-menu-item nzDanger (click)="bulkDelete()"> 删除 </li>
+        </ul>
+      </nz-dropdown-menu>
+    </ng-container>
+    <button *nzSpaceItem nz-button nzType="primary" (click)="open()"> 新增 </button>
   </nz-space>
-</ng-template>
+</wpx-table>
 
-<nz-card [nzTitle]="searchRef" [nzExtra]="actionRef">
-  <nz-table
-    #rowSelectionTable
-    nzSize="middle"
-    nzBordered
-    nzShowPagination
-    nzShowSizeChanger
-    [nzData]="listOfData"
-    (nzCurrentPageDataChange)="onCurrentPageDataChange($event)"
-  >
-    <thead>
-      <tr>
-        <th
-          nzWidth="60px"
-          [nzChecked]="checked"
-          [nzIndeterminate]="indeterminate"
-          (nzCheckedChange)="onAllChecked($event)"
-        ></th>
-        <th>电子邮件</th>
-        <th>Age</th>
-        <th>Address</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let data of rowSelectionTable.data">
-        <td
-          [nzChecked]="setOfCheckedId.has(data.id)"
-          [nzDisabled]="data.disabled"
-          (nzCheckedChange)="onItemChecked(data.id, $event)"
-        ></td>
-        <td>{{ data.name }}</td>
-        <td>{{ data.age }}</td>
-        <td>{{ data.address }}</td>
-      </tr>
-    </tbody>
-  </nz-table>
-</nz-card>
+<nz-dropdown-menu #actions="nzDropdownMenu">
+  <ul *ngIf="tb.actived as v" nz-menu>
+    <li nz-menu-item nzDisabled>
+      <b>电子邮件 [{{ v.email }}]</b>
+    </li>
+    <li nz-menu-divider></li>
+    <li nz-menu-item (click)="open(v)"> 修改 </li>
+    <li nz-menu-item nzDanger (click)="delete(v)"> 删除 </li>
+  </ul>
+</nz-dropdown-menu>
