--- a/src/styles.less
+++ b/src/styles.less
@@ -2,13 +2,13 @@
 @import '~node_modules/ng-zorro-antd/resizable/style/entry.less';
 @import '~node_modules/ng-zorro-antd/code-editor/style/entry.less';
 
-@nav-height: 54px;
+@nav-height: 60px;
 
 nz-header.nav {
   height: @nav-height;
   line-height: @nav-height;
   padding: 0 12px;
-  background: #fafafa;
+  background: #fff;
   border-bottom: 1px solid #f0f0f0;
 }
 
