--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -1,5 +1,58 @@
+<ng-template #titleRef>
+  <nz-space>
+    <wpx-keyword
+      *nzSpaceItem
+      [wpxModel]="model"
+      [wpxKeys]="['email', 'name']"
+      (wpxSubmit)="getData()"
+      wpxPlaceholder="电子邮件、姓名"
+    ></wpx-keyword>
+    <wpx-toolbox *nzSpaceItem [wpxModel]="model" [wpxSearchForm]="form" (wpxClear)="clear()" (wpxRefresh)="getData()">
+      <form *ngIf="form" nz-form id="search" [formGroup]="form" (wpxSubmit)="search($event)">
+        <nz-row [nzGutter]="[16, 16]">
+          <nz-col [nzSpan]="6">
+            <nz-form-item>
+              <nz-form-label>电子邮件</nz-form-label>
+              <nz-form-control>
+                <input nz-input formControlName="email" />
+              </nz-form-control>
+            </nz-form-item>
+          </nz-col>
+          <nz-col [nzSpan]="6">
+            <nz-form-item>
+              <nz-form-label>姓名</nz-form-label>
+              <nz-form-control>
+                <input nz-input formControlName="name" />
+              </nz-form-control>
+            </nz-form-item>
+          </nz-col>
+        </nz-row>
+      </form>
+    </wpx-toolbox>
+  </nz-space>
+</ng-template>
+
+<ng-template #extraRef>
+  <nz-space>
+    <ng-container *ngIf="model.selection.size as size">
+      <button *nzSpaceItem nz-button nzType="dashed" nz-dropdown [nzDropdownMenu]="menu"> 已选中 {{ size }} 项 </button>
+      <nz-dropdown-menu #menu="nzDropdownMenu">
+        <ul nz-menu>
+          <li nz-menu-item (click)="basicTable.clearSelections()"> 取消选择 </li>
+        </ul>
+        <ul nz-menu>
+          <li nz-menu-item nzDanger (click)="bulkDelete()"> 删除 </li>
+        </ul>
+      </nz-dropdown-menu>
+    </ng-container>
+    <button *nzSpaceItem nz-button nzType="primary" (click)="open()"> 新增 </button>
+  </nz-space>
+</ng-template>
+
 <wpx-table
-  #tb
+  #basicTable
+  [wpxTitle]="titleRef"
+  [wpxExtra]="extraRef"
   [wpxModel]="model"
   [wpxColumns]="[
     {
@@ -34,55 +87,10 @@
   [wpxActions]="actions"
   (wpxChange)="getData()"
 >
-  <nz-space wpxTitle>
-    <wpx-keyword
-      *nzSpaceItem
-      [wpxModel]="model"
-      [wpxKeys]="['email', 'name']"
-      (wpxSubmit)="getData()"
-      wpxPlaceholder="电子邮件、姓名"
-    ></wpx-keyword>
-    <wpx-toolbox *nzSpaceItem [wpxModel]="model" [wpxSearchForm]="form" (wpxClear)="clear()" (wpxRefresh)="getData()">
-      <form *ngIf="form" nz-form id="search" [formGroup]="form" (wpxSubmit)="search($event)">
-        <nz-row [nzGutter]="[16, 16]">
-          <nz-col [nzSpan]="6">
-            <nz-form-item>
-              <nz-form-label>电子邮件</nz-form-label>
-              <nz-form-control>
-                <input nz-input formControlName="email" />
-              </nz-form-control>
-            </nz-form-item>
-          </nz-col>
-          <nz-col [nzSpan]="6">
-            <nz-form-item>
-              <nz-form-label>姓名</nz-form-label>
-              <nz-form-control>
-                <input nz-input formControlName="name" />
-              </nz-form-control>
-            </nz-form-item>
-          </nz-col>
-        </nz-row>
-      </form>
-    </wpx-toolbox>
-  </nz-space>
-  <nz-space wpxExtra>
-    <ng-container *ngIf="model.selection.size as size">
-      <button *nzSpaceItem nz-button nzType="dashed" nz-dropdown [nzDropdownMenu]="menu"> 已选中 {{ size }} 项 </button>
-      <nz-dropdown-menu #menu="nzDropdownMenu">
-        <ul nz-menu>
-          <li nz-menu-item (click)="tb.clearSelections()"> 取消选择 </li>
-        </ul>
-        <ul nz-menu>
-          <li nz-menu-item nzDanger (click)="bulkDelete()"> 删除 </li>
-        </ul>
-      </nz-dropdown-menu>
-    </ng-container>
-    <button *nzSpaceItem nz-button nzType="primary" (click)="open()"> 新增 </button>
-  </nz-space>
 </wpx-table>
 
 <nz-dropdown-menu #actions="nzDropdownMenu">
-  <ul *ngIf="tb.actived as v" nz-menu>
+  <ul *ngIf="basicTable.actived as v" nz-menu>
     <li nz-menu-item nzDisabled>
       <b>电子邮件 [{{ v.email }}]</b>
     </li>
