update: table & audit

--- a/src/app/admin/settings/values/form/form.component.html
+++ b/src/app/admin/settings/values/form/form.component.html
@@ -14,7 +14,7 @@
       [nzAutoTips]="tips.value"
     >
       <ng-container [ngSwitch]="key">
-        <ng-container *ngSwitchCase="'resources'">
+        <ng-container *ngSwitchCase="'RestControls'">
           <nz-code-editor
             style="height: 400px; width: 100%"
             formControlName="value"
