--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -50,13 +50,13 @@
               <span>扩展服务</span>
             </li>
             <li nz-menu-divider></li>
-            <li nz-menu-item nzMatchRouter routerLink="settings/login_logs">
-              <span nz-icon nzType="audit"></span>
-              <span i18n>登录日志</span>
-            </li>
-            <li nz-menu-item nzMatchRouter routerLink="settings/access_logs">
+            <li nz-menu-item nzMatchRouter routerLink="settings/logined">
               <span nz-icon nzType="history"></span>
-              <span i18n>访问日志</span>
+              <span i18n>登录历史</span>
+            </li>
+            <li nz-menu-item nzMatchRouter routerLink="settings/audit">
+              <span nz-icon nzType="audit"></span>
+              <span i18n>审计日志</span>
             </li>
           </ul>
         </li>
