update: lark & oauth

--- a/src/app/admin/settings/logined/logined.component.html
+++ b/src/app/admin/settings/logined/logined.component.html
@@ -131,7 +131,7 @@
   <ng-template #source let-data>
     <ng-container [ngSwitch]="data.metadata.source">
       <ng-container *ngSwitchCase="'email'">电子邮件</ng-container>
-      <ng-container *ngSwitchCase="'lark'">Lark</ng-container>
+      <ng-container *ngSwitchCase="'lark'">Lark/Feishu</ng-container>
     </ng-container>
   </ng-template>
   <ng-template #user let-data>
